kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  ingress:
    # Allow traffic ONLY from pods with label 'app: php-app' on TCP port 3306
    - from:
        - podSelector:
            matchLabels:
              app: php-app
      ports:
        - protocol: TCP
          port: 3306
